# trading-bot

./: .env.template  .gitignore  PLAN.md  README.md  pyproject.toml  trading_bot_agentic_ai_execution_plan_260714.md  데이터 수집.bat  트레이딩봇 실행.bat
config/: default.toml  research.toml  themes.toml
docs/: architecture.md  manual.html  quant_research_spec.md  valuation-framework.md
docs/superpowers/plans/: 2026-07-19-phase1-research-framework.md  2026-07-20-phase2-data-pipeline.md  2026-07-21-valuation-framework.md  2026-07-22-phase3-theme-universe-factors.md  2026-07-23-phase4-theme-strategy.md
docs/superpowers/specs/: 2026-07-19-kr-theme-multifactor-design.md  2026-07-21-value-investing-framework-design.md
src/tradingbot/: __main__.py  cli.py  config.py  gui.py  models.py  portfolio.py  risk.py  services.py  symbols.py
src/tradingbot/allocation/: constraints.py  ranking.py  rebalance.py  weights.py
src/tradingbot/broker/: __init__.py  backtest.py  base.py  fees.py  kis.py  paper.py
src/tradingbot/data/: __init__.py  cache.py  corp_codes.py  credentials.py  feed.py  flows.py  fundamentals.py  fundamentals_panel.py  macro.py  panel.py  pipeline.py  polling.py  quality.py  sources.py  store.py  universe.py  valuation.py
src/tradingbot/engine/: __init__.py  calendar.py  clock.py  engine.py  paper.py
src/tradingbot/factors/: __init__.py  base.py  flow.py  momentum.py  (+3 more)
tests/: conftest.py  test_allocation_constraints.py  test_allocation_ranking.py  test_allocation_rebalance.py  test_allocation_weights.py  test_backtest_broker.py  test_calendar.py  test_clock.py  test_data_corp_codes.py  test_data_credentials.py  test_data_flows.py  test_data_fundamentals.py  test_data_fundamentals_panel.py  test_data_macro.py  test_data_panel.py  test_data_pipeline.py  test_data_quality.py  test_data_resilience.py  test_data_store_panel.py  test_data_universe.py  test_data_valuation.py  test_factors.py  test_factors_flow.py  test_factors_registry_phase3.py  test_factors_transform.py  test_factors_value.py  test_feed.py  test_fees.py  test_fundamentals_cli.py  test_fundamentals_client.py  test_fundamentals_fetch.py  test_fundamentals_pit.py  test_kis_broker.py  test_metrics_report.py  test_order_phase_and_rsi.py  test_paper_broker.py  test_pipeline_quality.py  test_polling_feed.py  test_research_dates.py  test_research_experiment.py  (+19 more)
tests/data/: make_fixtures.py
tradingbot/: __init__.py
(+31 files in other folders)
