[project]
name = "trading-bot"
version = "0.1.0"
description = "Event-driven stock trading bot for backtest, paper trading, and future live brokerage integration."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "matplotlib",
    "finance-datareader",
    "yfinance",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
tradingbot = "tradingbot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingbot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
