[project]
name = "trading-bot"
version = "0.1.0"
description = "Event-driven stock trading bot for backtest, paper trading, and future live brokerage integration."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3,<3",
    "numpy>=2.0",
    "pyarrow>=16",
    "matplotlib>=3.9",
    "finance-datareader>=0.9.96",
    "yfinance>=0.2.40,<1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
tradingbot = "tradingbot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradingbot"]

[tool.uv]
environments = ["sys_platform == 'win32'"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
